Improved positioning of popover arrow and made popover always right-align so it displays correctly on all panel sizes.

--- a/public/css/dashboard.less
+++ b/public/css/dashboard.less
@@ -10,6 +10,20 @@ textarea {
 .panel-title {
   display: inline-block;
 }
+.panel-heading {
+  .popover {
+    left: auto!important; right: 0px; /* bootstrap really wants to add a left value for whatever reason */
+    margin-left: 8px!important;
+    margin-right: 8px!important;
+
+    .arrow {
+      left: auto; right: 33px;
+    }
+  }
+  .popover-content {
+    overflow-wrap: break-word;
+  }
+}
 .panel-info {
   width: auto!important;
   float: right;
@@ -44,11 +58,4 @@ textarea {
 .panel-span-8 {
   width: 1024px;
 }
-.popover {
-  left: 0px!important; /* bootstrap really wants to add a left value for whatever reason */
-  margin-left: 8px!important;
-  margin-right: 8px!important;
-}
-.popover-content {
-  overflow-wrap: break-word;
-}
+
